# CVinRust

./: .gitignore  README.md
CVinRust/: Cargo.toml
ClassicalCV/: Cargo.toml  rust-client.rlsPath
ClassicalCV/src/BasicOps/: imageReadnDisplay.rs  videoReadnDisplay.rs
ImageOps/: Cargo.toml
ImageOps/src/: main.rs
