[package]
name = "ClassicalCV"
version = "0.1.0"
authors = ["Vi-Sri <nikola.tesla195@gmail.com>"]
edition = "2018"

[dependencies]
opencv = {version = "0.49", features = ["clang-runtime", "contrib", "buildtime-bindgen"]}

[[bin]]
name = "video-read-n-display"
path = "src/BasicOps/videoReadnDisplay.rs"