[package]
name = "ImageOps"
version = "0.1.0"
authors = ["Vi-Sri <nikola.tesla195@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.49", default-features = false, features = ["opencv-34", "buildtime-bindgen", "contrib"]}
